# basic-rust-devcontainer

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
